# LLM-Trace-and-Cost-Studio

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/studio_ui/: app.py  client.py
apps/studio_ui/pages/: 1_Overview.py  2_Calls_List.py  3_Call_Detail.py
apps/trace_api/: main.py
apps/trace_api/db/: sqlite.py
infra/azure/: containerapps.md
infra/docker/: studio_ui.Dockerfile  trace_api.Dockerfile
shared/: cost.py  redaction.py  schemas.py
tests/: test_cost.py  test_db_sqlite.py  test_schemas.py  test_trace_api_endpoints.py
